<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Friend Mapper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="_android_attr_textappearancelarge">\?android:attr/textAppearanceLarge</string>
    <string name="friend_mapper">Friend Mapper</string>
    <string name="title_activity_register">Register</string>
    <string name="phone_number_">Phone Number:</string>
    <string name="name_">Name:</string>
    <string name="submit">Submit</string>
    <string name="registration">Registration</string>
    <string name="title_activity_friend_mapper_main">Friend Mapper</string>
    <string name="by_team_hrgm">By Team HRGM</string>
    <string name="error_phone_number_is_not_valid_sim_card_not_inserted_try_again_later_">"Error: Phone Number is not valid / SIM Card not inserted. Try again later! "</string>
    <string name="mainpagelogo_normal">MainPageLogo_normal</string>
    <string name="mainpagelogo_extended">mainpagelogo_extended</string>

</resources>