<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ProgressBar
        android:id="@+id/MainPageLoading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="182dp"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/FriendMapperHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/MainPageLoading"
        android:text="@string/friend_mapper"
        android:textAppearance="@string/_android_attr_textappearancelarge"
        android:textColor="@color/White"
        android:textSize="39sp"
        android:textStyle="normal"
        android:typeface="serif" />

    <ImageView
        android:contentDescription="@string/mainpagelogo_extended"
        android:id="@+id/MainPageLogo_extended"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/HRGMText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/MainPageLogo_extended"
        android:text="@string/by_team_hrgm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:contentDescription="@string/mainpagelogo_normal"
        android:id="@+id/MainPageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/MainPageLogo_extended"
        android:layout_alignLeft="@+id/MainPageLoading"
        android:layout_alignRight="@+id/MainPageLogo_extended"
        android:layout_alignTop="@+id/MainPageLogo_extended"
        android:src="@drawable/ic_logo" />

</RelativeLayout>